[package]
name = "sushi"
version = "0.1.0"
authors = ["jbfp <jakob@jbfp.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.2"
actix-rt = "1.0"
actix-web = "2.0"
futures = "0.3"
itertools = "0.9"
jsonwebtoken = "7.2"
lazy_static = "1.4"
linked_hash_set = "0.1.4"
listenfd = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
rand = "0.7"
rusqlite = { version = "0.24", features = ["load_extension", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
serial_test = "*"
test-case = "*"
